# jamolib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  __init__.py  examples.py  jamolib.py  pyproject.toml  readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-publish.yml
docs/assets/: hero-shot.html  preview-shot.html
examples/: batchim_boundaries.py  mixed_text.py  quickstart.py
scripts/: benchmark.py
src/jamolib/: __init__.py  core.py
tests/: test_examples.py  test_jamolib.py
